syntax = "proto3";

package services;

option go_package = "localnetv1";

service Endpoints {
    // Returns all the endpoints for this node, then continue to stream the changes to them.
    rpc Next (NextFilter) returns (stream NextItem);
}

message NextItem {
    // The revision being sent (first element in the stream)
    uint64 Rev = 1;
    // A service endpoints item
    ServiceEndpoints Endpoints = 2;
}

message NextFilter {
    // The latest revision we're aware of (0 at first)
    uint64 Rev = 1;
    // Limit the list to one namespace (empty for all).
    string Namespace = 2;
    // Limit the list to services of the given type (ClusterIP, ExternalLoadBalancer, etc.).
    string Type = 3;
    // Limit the list to services matching those labels.
    map<string, string> MatchLabels = 4;
}

message ServiceEndpoints {
    string Namespace = 1;
    string Name = 2;
    string Type = 3;

    ServiceIPs IPs = 100;
    repeated PortMapping Ports = 101;
}

message ServiceIPs {
    string ClusterIP = 1;
    repeated string ExternalIPs = 2;
    repeated string EndpointIPs = 3;
}

message PortMapping {
    string Name       = 1;
    string Protocol   = 2;
    int32  Port       = 3;
    int32  NodePort   = 4;
    int32  TargetPort = 5;
}
